@@ -1,3 +1,11 @@
+2008-05-06  Jens Granseuer  <jensgr@gmx.net>
+
+	* Makefile.am:
+	* gnome-theme-info.c: (gnome_theme_info_error_quark),
+	(gnome_theme_meta_info_free), (gnome_theme_meta_info_validate):
+	* gnome-theme-info.h: move metatheme validation code here from the
+	appearance capplet and add proper error codes
+
 2008-05-04  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-theme-test.c: (main): doesn't need gnome-vfs any longer
